# substructural

./: CNAME  Cargo.toml  README.md  build.sh  index.html
.github/workflows/: main.yml
css/: index.css
examples/: fib.txt  http.txt  http_error1.txt  http_error2.txt  io.txt  io_error1.txt  io_error2.txt  io_error3.txt  manifest.json
js/: cursor.js  index.js
js/wasm/: README.md  substructural.d.ts  substructural.js  substructural_bg.wasm  substructural_bg.wasm.d.ts
pkg/: README.md  package.json  substructural_bg.wasm.d.ts
src/: error.rs  eval.rs  formatter.rs  grammar.pest  lib.rs  main.rs  syntax.rs  typing.rs
