[package]
name = "substructural"
version = "0.1.0"
edition = "2021"
authors = ["Chengke <chengke@pku.edu.cn>", "Renze <crz@pku.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
wasm-bindgen = "0.2"
js-sys = "0.3.56"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0
debug = true
